# tokligence-gateway-python

./: .gitignore  CHANGELOG.md  CHAT_FEATURE_SUMMARY.md  CHAT_IMPLEMENTATION.md  CODER_PROFILE_SPEC.md  CONTRIBUTING.md  PACKAGING_STRATEGY.md  README.md  RELEASE_CHECKLIST.md  SCENARIO_ANALYSIS.md  build_hooks.py  pyproject.toml
.github/: AUTOMATION.md  PAT_SETUP.md  SETUP_ACTIONS.md
.github/workflows/: ci.yml  publish.yml  sync-release.yml  version-simple.yml  version.yml
examples/: api_client.py  basic_usage.py
scripts/: build.sh  bump_version.py  publish.sh  sync_docs.py
tests/: test_chat_detector.py  test_chat_knowledge.py  test_chat_tools.py  test_import.py  test_integration_chat.py
tokligence/: __init__.py  cli.py  config.py  daemon.py  gateway.py  utils.py
tokligence/chat/: __init__.py  client.py  detector.py  knowledge.py  session.py  tools.py
tokligence/knowledge/: FIREWALL_REDACT_MODE.md  PII_ENTITIES_REFERENCE.md  PROMPT_FIREWALL.md  QUICK_START.md  README.md  USER_GUIDE.md  _meta.json  configuration_guide.md
